# SmartSpectra

./: .gitignore  Package.swift  README.md  Swift SDK Documentation.txt  docker-compose.yml
android/: .gitattributes  README.md  build.gradle.kts  settings.gradle.kts
android/fastlane/: Fastfile
android/samples/: build_flavor_config.gradle
android/sdk/: build.gradle.kts  gradle.properties
android/sdk/src/main/assets/: metrics_cpu_continuous_rest.binarypb  metrics_cpu_spot_rest.binarypb  pose_landmark_lite.tflite
api/: CMakeLists.txt  Dockerfile  IMPLEMENTATION_PLAN.md  README.md  build.sh  docker-compose.yml  run.sh
api/docs/: openapi.yaml
api/include/: FrameBufferVideoSource.hpp
api/samples/js/: app.js  index.html
api/src/: FrameBufferVideoSource.cpp  main.cpp
cpp/: .gitignore  CMakeLists.txt  README.md
cpp/cmake/extensions/: SmartSpectra_install.cmake  SmartSpectra_packaging.cmake  SmartSpectra_version.cmake
cpp/cmake/scripts/: get_venv_base.py
cpp/cmake/templates/: smartspectra_protobuf_pyproject.toml
cpp/docs/: Doxyfile.in  build_docs.sh  build_linux.md  build_macos.md  command_line_reference.md  header.html
cpp/samples/minimal_rest_spot_example/: main.cc
cpp/samples/rest_continuous_example/: CMakeLists.txt  main.cc
cpp/samples/rest_spot_example/: main.cc
cpp/smartspectra/container/: CMakeLists.txt  background_container.hpp  background_container_impl.hpp  benchmarking.hpp  configuration.hpp.in  container.hpp  container_impl.hpp  foreground_container.hpp  foreground_container_impl.hpp  image_transfer.hpp  initialization.hpp  initialization_impl.hpp  json_file_io.cpp  json_file_io.hpp  keyboard_input.cpp  keyboard_input.hpp  operation_context.hpp  output_stream_poller_wrapper.cpp  output_stream_poller_wrapper.hpp  packet_helpers.hpp  settings.hpp
cpp/smartspectra/gui/: CMakeLists.txt  opencv_hud.cpp  opencv_hud.hpp  opencv_trace_plotter.cpp  opencv_trace_plotter.hpp  opencv_value_indicator.cpp  opencv_value_indicator.hpp
cpp/smartspectra/video_source/: CMakeLists.txt  factory.cpp  factory.hpp  input_transform.hpp  interface.cpp  interface.hpp  resolution_selection_mode.hpp  settings.hpp  video_source.hpp
cpp/smartspectra/video_source/camera/: capture_video_source.cpp  capture_video_source.hpp
cpp/smartspectra/video_source/file_stream/: file_stream.cpp  file_stream.hpp
docs/: authentication.md
example/: Dockerfile  package.json
sdk/src/: networkClient.ts
server/: binding.gyp
server/native/: smartspectra.cc
server/src/: nativeBridge.ts  session.ts
swift/: CLAUDE.md  README.md
swift/SmartSpectra.xcworkspace/xcshareddata/swiftpm/: Package.resolved
swift/SmartSpectra.xcworkspace/xcuserdata/wei.xcuserdatad/: UserInterfaceState.xcuserstate
swift/samples/demo-app/: ContentView.swift  DemoAppView.swift  HeadlessSDKExample.swift  Info.plist  StaringContestView.swift
swift/samples/demo-app.xcodeproj/: project.pbxproj
swift/samples/demo-app.xcodeproj/xcshareddata/xcschemes/: demo-app.xcscheme
swift/samples/smartspectra-trials/: ContentView.swift
swift/sdk/: Package.swift  README.md
swift/sdk/Sources/Frameworks/PresagePreprocessing.xcframework/: Info.plist
swift/sdk/Sources/SmartSpectraSwiftSDK/: AVCaptureDeviceManager.swift  MetricsProtobufExtensions.swift  SmartSpectraSdkConfig.swift  SmartSpectraSwiftSDK.swift  SmartSpectraView.swift  SmartSpectraVitalsProcessor.swift  metrics.pb.swift
web/: Dockerfile  docker-compose.yml
web/example/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.json
web/example/src/: main.ts
web/sdk/: package-lock.json  package.json  tsconfig.json
web/sdk/src/: NetworkClient.ts  VideoCaptureManager.ts  errors.ts  index.ts  types.ts  videoCapture.ts
web/server/: Dockerfile  binding.gyp  package-lock.json  package.json  tsconfig.json
web/server/native/: smartspectra.cc
web/server/src/: index.ts
(+53 files in other folders)
